--- a/coingecko-api-wrapper.cabal
+++ b/coingecko-api-wrapper.cabal
@@ -13,7 +13,10 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Coingecko
-  build-depends:       base >= 4.7 && < 5, aeson, http-conduit
+  build-depends:       base >= 4.7 && < 5
+                     , aeson
+                     , http-conduit
+                     , time
   default-language:    Haskell2010
 
 source-repository head
